--- a/bin/PropertyService.dll.config
+++ b/bin/PropertyService.dll.config
@@ -12,8 +12,10 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <httpRuntime targetFramework="4.6" />
-    <compilation debug="true" targetFramework="4.6" />
+    <httpRuntime targetFramework="4.0" />
+	<!-- <httpRuntime relaxedUrlToFileSystemMapping="true"/> -->
+    <compilation debug="true" targetFramework="4.0" />
+	<!-- <customErrors mode="RemoteOnly" defaultRedirect="Error.html"/> -->
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
@@ -35,6 +37,13 @@
       <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+	<!-- <modules>
+		<remove name="UrlRoutingModule-4.0"/>
+		<add name="UrlRoutingModule-4.0" type="System.Web.Routing.UrlRoutingModule" preCondition=""/>
+	</modules> -->
+	<!-- <modules runAllManagedModulesForAllRequests="true">
+		<add name="ScriptCompressionModule" type="Westwind.Web.ScriptCompressionModule,Westwind.Web" />
+	</modules> -->
   </system.webServer>
 <connectionStrings>
   <add name="AWSPropertyDB" 
@@ -43,5 +52,6 @@
 <!--<add name="AWSPropertyDB" 
     connectionString="Data Source=propertyagent.csttorpkjlqk.us-east-1.rds.amazonaws.com;User ID=sa;Password=ryan123*;Initial Catalog=PropertyAgent;"
     providerName="Microsoft.EntityFrameworkCore.SqlServer" />-->
+	
 </connectionStrings>
 </configuration>
